Nishi, Abhi #0 UI Change: fixing the overflow of registrations count for visualizations.

--- a/whp-reports-web/src/main/webapp/styles/standard.css
+++ b/whp-reports-web/src/main/webapp/styles/standard.css
@@ -1380,3 +1380,8 @@ pre {
 .statistics li li .outcome{
     line-height: normal;
 }
+
+.spanHeight {
+    line-height: 140%;
+}
+
